--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,63 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.mycompany</groupId>
+  <groupId>com.sourceclear</groupId>
   <artifactId>headers-security</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>SourceClear - Headers</name>
-  <url>http://maven.apache.org</url>
+  <url>http://www.sourceclear.com</url>
+  <description>A servlet filter that adds a collection of security related headers to all responses.</description>
+  
+  <licenses>
+    <license>
+      <name>Mozilla Public License v2.0</name>
+      <url>http://www.mozilla.org/MPL/</url>
+      <distribution>repo
+      </distribution>
+    </license>    
+  </licenses>
 
+  <scm>
+    <url>http://github.com/sourceclear/headersecurity</url>
+    <connection></connection>
+  </scm>
+
+  <developers>
+    <developer>
+      <id>kickroot</id>
+      <name>Jason Nichols</name>
+      <email>jason@sourceclear.com</email>
+    </developer>
+  </developers>    
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>13.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.2</version>
+    </dependency>    
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
