--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>com.sourceclear.pom</groupId>
+    <artifactId>sourceclear-private</artifactId>
+    <version>0.1.0</version>
+  </parent>
+
+
   <groupId>com.sourceclear</groupId>
   <artifactId>header-security</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -24,34 +31,7 @@
     <connection></connection>
   </scm>
 
-  <developers>
-    <developer>
-      <id>sourceclear</id>
-      <name>SourceClear Inc</name>
-      <email>opensource@sourceclear.com</email>
-    </developer>
-  </developers>    
-  
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>13.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.2.2</version>
-    </dependency>    
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>2.0.1</version>
-    </dependency>
+  <dependencies>  
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
