Major refactoring, abstracted out Injectors and Configs using a ServiceLoader

--- a/src/test/resources/headerVectors/disabled-xssProtection.conf
+++ b/src/test/resources/headerVectors/disabled-xssProtection.conf
@@ -1,24 +1,24 @@
 {
-  "xContentType": {
+  "XContentTypeConfig": {
     "enabled":true
   },
   
-  "xFrameOptions": {
+  "XFrameOptionsConfig": {
     "enabled":true,
     "value":"DENY"
   },
 
-  "xssProtection": {
+  "XssProtectionConfig": {
     "enabled":false
   },
 
-  "hstsConfig": {
+  "HstsConfig": {
     "enabled":true,
     "includeSubdomains":true,
     "maxAge":31536000
   },
 
-  "cspConfig": {
+  "CspConfig": {
     "csp": {
       "default-src":["'self'"]},
       "cspReportOnly":{}
