Added support for HttpOnly, still need to update docs

--- a/src/test/resources/headerVectors/default.conf
+++ b/src/test/resources/headerVectors/default.conf
@@ -1,26 +1,32 @@
 {
   "XContentTypeConfig": {
-    "enabled":true
+    "enabled": true
   },
   
   "XFrameOptionsConfig": {
-    "enabled":true,
+    "enabled": true,
     "value":"DENY"
   },
 
   "XssProtectionConfig": {
-    "enabled":true
+    "enabled": true
   },
 
   "HstsConfig": {
-    "enabled":true,
+    "enabled": true,
     "includeSubdomains":true,
     "maxAge":31536000
   },
 
   "CspConfig": {
     "csp": {
-      "default-src":["'self'"]},
-      "cspReportOnly":{}
-    }
+      "default-src":["'self'"]
+    },
+    "cspReportOnly":{}
+  },
+
+  "HttpOnlyConfig": {
+    "enabled": true,
+    "sessionPatterns": ["JSESSIONID"]
   }
+}
