Project refactoring, http-only and secure cookies are now set through web fragments instead of cookie injectors. Fixes for #1 and #2

--- a/headlines/pom.xml
+++ b/headlines/pom.xml
@@ -2,28 +2,21 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.sourceclear.headlines</groupId>
-	<artifactId>headlines-parent</artifactId>
+	<artifactId>headlines</artifactId>
 	<version>0.1.4-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
   
   <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
+    <groupId>com.sourceclear.headlines</groupId>
+    <artifactId>headlines-parent</artifactId>
+    <version>0.1.4-SNAPSHOT</version>
   </parent>
 
-  <modules>
-    <module>headlines</module>
-    <module>http-only</module>
-    <module>secure</module>    
-    <module>complete</module>    
-  </modules>
-  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
-	<name>SourceClear - HeadLines Parent</name>
+	<name>SourceClear - HeadLines</name>
 	<url>http://www.sourceclear.com</url>
 	<description>A servlet filter that adds a collection of security related headers to all responses.</description>
 
