--- a/headlines/pom.xml
+++ b/headlines/pom.xml
@@ -3,13 +3,13 @@
 
 	<groupId>com.sourceclear.headlines</groupId>
 	<artifactId>headlines</artifactId>
-	<version>0.1.4-SNAPSHOT</version>
+	<version>0.1.4</version>
 	<packaging>jar</packaging>
   
   <parent>
     <groupId>com.sourceclear.headlines</groupId>
     <artifactId>headlines-parent</artifactId>
-    <version>0.1.4-SNAPSHOT</version>
+    <version>0.1.4</version>
   </parent>
 
   <properties>
