--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.sourceclear.headlines</groupId>
 	<artifactId>headlines-parent</artifactId>
-	<version>0.1.4</version>
+	<version>0.1.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
   
   <parent>
